# TaskPie-backend

./: .gitignore  README.md  all_endpoints.http  api_test.http  api_test_auth.http  check_api.py  database.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 309a849fa4f6_add_hashed_password_to_user.py  74d1fc0dad9e_add_subtask_table.py  (+7 more)
auth/: deps.py  google_auth.py  jwt_handler.py  permissions.py  security.py
constants/: __init__.py  activity_actions.py
core/: config.py
dependencies/: __init__.py  auth.py  task_permissions.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: README.md  WORKFLOW.md  activity-logging-comparison.md  api-endpoints.md  authentication-system.md  bug-fixes.md  map.md
middleware/: __init__.py  http_request_log_middleware.py  jwt_middleware.py
models/: __init__.py  activity_log_model.py  base_model.py  http_request_log_model.py  kanban_column_model.py  label_model.py  project_model.py  project_team_model.py  refresh_token_model.py  reminder_model.py  task_model.py  team_member_model.py  team_model.py  user_model.py
routers/: activity_router.py  auth_router.py  comment_router.py  kanban_router.py  label_router.py  project_router.py  realtime_router.py  reminder_router.py  subtask_router.py  task_router.py  team_router.py
schemas/: auth_schame.py  comment_schema.py  kanban_schema.py  label_schame.py  project_schema.py  remindedr_schame.py  subtask_schema.py  task_schema.py  team_schema.py
services/: __init__.py  activity_service.py  reminder_scheduler.py  task_service.py  websocket_manager.py
